top section done

--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sadiya's portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h3>Welcome to my portfolio.</h3>
+    <section>
+        <div class="row">
+            <div class="col text-col">
+                <h1 class="title">Welcome to my <br> <span class="colored-text">Portfolio</span> world</h1>
+                <h3>Build Climber and Train Stopper</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                <button class="hire-btn">Hire Me</button>
+            </div>
+            <div class="col">
+                <img src="images/jhankar.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
